task_2/homework/web-svc-task2-v1.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
    version: v1
  name: web-canary-task2-svc-v1
spec:
  type: ClusterIP
  selector:
    app: web
    version: v1
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
