task_2/homework/web-svc-task2-v2.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
    version: v2
  name: web-canary-task2-svc-v2
spec:
  type: ClusterIP
  selector:
    app: web
    version: v2
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
