task_2/homework/web-ingress-task2-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: web-canary-task2-svc-v1
            port:
              number: 80
              #ingressClassName: nginx
